--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.4.8",
+    "date-fns": "^4.1.0",
     "firebase": "^11.6.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
