--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@react-hook/window-size": "^3.1.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.9.0",
     "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.8",
     "date-fns": "^4.1.0",
@@ -17,7 +19,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-confetti": "^6.4.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.4.1",
+    "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
