some dashboard changes is added, exercise and quiz pages is redesigned.

--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.8",
     "date-fns": "^4.1.0",
+    "emailjs-com": "^3.2.0",
     "firebase": "^11.6.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-confetti": "^6.4.0",
+    "react-custom-roulette": "^1.4.1",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
