--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "date-fns": "^4.1.0",
     "emailjs-com": "^3.2.0",
     "firebase": "^11.6.0",
-    "react": "^19.1.0",
+    "react": "^18.2.0",
+    "react-canvas-confetti": "^2.0.7",
     "react-chartjs-2": "^5.3.0",
     "react-confetti": "^6.4.0",
     "react-custom-roulette": "^1.4.1",
-    "react-dom": "^19.1.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^7.5.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "react-wheel-of-fortune": "^0.1.0",
+    "react-wheel-of-prizes": "^1.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
